--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@next/mdx": "^16.1.1",
     "@types/mdx": "^2.0.13",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "rehype-highlight": "^7.0.2",
